// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OpenAPI 3.0 — $ref siblings stripped > $ref siblings are stripped in 3.0: description on ref is ignored 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Original target description */
export type Target = { value?: string; };

/** Original target description */
export type RefWithSibling = Target;"
`;

exports[`OpenAPI 3.0 — $ref siblings stripped > 3.1 preserves $ref siblings when preserveRefSiblings is enabled 1`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** Original target description */
export type Target = { value?: string; };

/** Override from sibling */
export type RefWithSibling = Target;"
`;

exports[`OpenAPI 3.0 — AdditionalProperties & Required (3.0-#20-#21) > 3.0-#20: generates [key: string]: unknown for additionalProperties: true 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type FreeForm = { name?: string; } & { [key: string]: unknown; };"
`;

exports[`OpenAPI 3.0 — AdditionalProperties & Required (3.0-#20-#21) > 3.0-#20: generates index signature for additionalProperties with type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type StringMap = { [key: string]: string; };"
`;

exports[`OpenAPI 3.0 — AdditionalProperties & Required (3.0-#20-#21) > 3.0-#21: all properties optional when required is absent 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Flexible = { a?: string; b?: number; };"
`;

exports[`OpenAPI 3.0 — AdditionalProperties & Required (3.0-#20-#21) > 3.0-#21: marks required properties without ?, optional properties with ? 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Profile = { username: string; email: string; bio?: string; };"
`;

exports[`OpenAPI 3.0 — Composition & Discriminator (3.0-#8-#11) > 3.0-#8: generates intersection type (&) for allOf 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Pet = { "petType": string; };

export type Cat = Pet & { meow?: boolean; } & { petType: 'cat' };

export type Dog = Pet & { bark?: boolean; } & { petType: 'dog' };

export type PetVariant = ({ petType: 'cat' } & Pet & { meow?: boolean; } & { petType: 'cat' }) | ({ petType: 'dog' } & Pet & { bark?: boolean; } & { petType: 'dog' });

export type MixedUnion = string | number;

export type PetVariant = Cat | Dog;

export type PetVariantVariant = Cat | Dog;"
`;

exports[`OpenAPI 3.0 — Composition & Discriminator (3.0-#8-#11) > 3.0-#9: generates union type (|) for oneOf without discriminator 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Cat = { meow?: boolean; };

export type Dog = { bark?: boolean; };

export type Pet = Cat | Dog;"
`;

exports[`OpenAPI 3.0 — Composition & Discriminator (3.0-#8-#11) > 3.0-#10: generates union type (|) for anyOf 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Pet = { "petType": string; };

export type Cat = Pet & { meow?: boolean; } & { petType: 'cat' };

export type Dog = Pet & { bark?: boolean; } & { petType: 'dog' };

export type PetVariant = ({ petType: 'cat' } & Pet & { meow?: boolean; } & { petType: 'cat' }) | ({ petType: 'dog' } & Pet & { bark?: boolean; } & { petType: 'dog' });

export type MixedUnion = string | number;

export type PetVariant = Cat | Dog;

export type PetVariantVariant = Cat | Dog;"
`;

exports[`OpenAPI 3.0 — Composition & Discriminator (3.0-#8-#11) > 3.0-#11: generates discriminated union with propertyName and mapping 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Pet = { "petType": string; };

export type Cat = Pet & { meow?: boolean; } & { petType: 'cat' };

export type Dog = Pet & { bark?: boolean; } & { petType: 'dog' };

export type PetVariant = ({ petType: 'cat' } & Pet & { meow?: boolean; } & { petType: 'cat' }) | ({ petType: 'dog' } & Pet & { bark?: boolean; } & { petType: 'dog' });

export type MixedUnion = string | number;

export type PetVariant = Cat | Dog;

export type PetVariantVariant = Cat | Dog;"
`;

exports[`OpenAPI 3.0 — Data Types (3.0-#1-#6) > 3.0-#1: maps string type to TypeScript string 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Status = string;"
`;

exports[`OpenAPI 3.0 — Data Types (3.0-#1-#6) > 3.0-#2: maps number type to TypeScript number 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Price = number;"
`;

exports[`OpenAPI 3.0 — Data Types (3.0-#1-#6) > 3.0-#3: maps integer type to TypeScript number 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Count = number;"
`;

exports[`OpenAPI 3.0 — Data Types (3.0-#1-#6) > 3.0-#4: maps boolean type to TypeScript boolean 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Active = boolean;"
`;

exports[`OpenAPI 3.0 — Data Types (3.0-#1-#6) > 3.0-#5: maps array with items to TypeScript T[] 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Tags = string[];"
`;

exports[`OpenAPI 3.0 — Data Types (3.0-#1-#6) > 3.0-#6: maps object with properties to TypeScript interface-like type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type User = { name: string; age?: number; };"
`;

exports[`OpenAPI 3.0 — Default & Description (3.0-#14-#15) > 3.0-#14: does not crash with default value — property is correctly typed 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Config = { name: string; timeout?: number; };"
`;

exports[`OpenAPI 3.0 — Default & Description (3.0-#14-#15) > 3.0-#15: generates JSDoc comment from description on individual type alias 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** A valid email address */
export type Email = string;"
`;

exports[`OpenAPI 3.0 — Default & Description (3.0-#14-#15) > 3.0-#15: generates JSDoc comment from description on schema 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

/** A product in the catalog */
export type Product = { name?: string; };"
`;

exports[`OpenAPI 3.0 — Deprecated (3.0-#18) > 3.0-#18: does not crash for schema with deprecated flag 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type LegacyType = string;"
`;

exports[`OpenAPI 3.0 — Deprecated (3.0-#18) > 3.0-#18: includes @deprecated JSDoc for deprecated operations 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type GetOldResponse = string;"
`;

exports[`OpenAPI 3.0 — Deprecated (3.0-#18) > 3.0-#18: includes @deprecated JSDoc for deprecated operations 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { GetOldResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @deprecated
     */
    getOld: decorateWithErrors<() => Promise<GetOldResponse>, never>(
      async (): Promise<GetOldResponse> => {
        try {
          const result = await requester<GetOldResponse>("GET", \`/old\`, {});
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Enum & Const (3.0-#12-#13) > 3.0-#12: generates number literal union for number enum 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Priority = 1 | 2 | 3;"
`;

exports[`OpenAPI 3.0 — Enum & Const (3.0-#12-#13) > 3.0-#12: generates string literal union for string enum 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Status = 'active' | 'inactive' | 'pending';"
`;

exports[`OpenAPI 3.0 — Enum & Const (3.0-#12-#13) > 3.0-#13: does not crash when const is present with type — type is emitted, const ignored 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type FixedVersion = string;"
`;

exports[`OpenAPI 3.0 — Enum & Const (3.0-#12-#13) > 3.0-#13: produces unknown for const without type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type JustConst = unknown;"
`;

exports[`OpenAPI 3.0 — Exclusive Bounds, Tier 3 (3.0-#29-#30) > 3.0-#29: exclusiveMinimum without minimum does not crash 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type NoMin = number;"
`;

exports[`OpenAPI 3.0 — Exclusive Bounds, Tier 3 (3.0-#29-#30) > 3.0-#29: exclusiveMinimum: false does not affect type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type NonExclusive = number;"
`;

exports[`OpenAPI 3.0 — Exclusive Bounds, Tier 3 (3.0-#29-#30) > 3.0-#29: exclusiveMinimum: true + minimum: N produces correct type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ExclusiveMin = number;"
`;

exports[`OpenAPI 3.0 — Exclusive Bounds, Tier 3 (3.0-#29-#30) > 3.0-#29-#30: 3.0 boolean exclusive bounds produce same type as 3.1 numeric 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Bounded = number;"
`;

exports[`OpenAPI 3.0 — Exclusive Bounds, Tier 3 (3.0-#29-#30) > 3.0-#29-#30: 3.0 boolean exclusive bounds produce same type as 3.1 numeric 2`] = `
"// Auto-generated by genoc from OpenAPI 3.1.0 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Bounded = number;"
`;

exports[`OpenAPI 3.0 — Exclusive Bounds, Tier 3 (3.0-#29-#30) > 3.0-#29-#30: both exclusive bounds produce correct type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type BothBounded = number;"
`;

exports[`OpenAPI 3.0 — Exclusive Bounds, Tier 3 (3.0-#29-#30) > 3.0-#29-#30: exclusive bounds on object property produce correct type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Config = { priority: number; };"
`;

exports[`OpenAPI 3.0 — Exclusive Bounds, Tier 3 (3.0-#29-#30) > 3.0-#29-#30: exclusive bounds with nullable produce correct type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type NullableBounded = number | null;"
`;

exports[`OpenAPI 3.0 — Exclusive Bounds, Tier 3 (3.0-#29-#30) > 3.0-#30: exclusiveMaximum: false does not affect type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type NonExclusiveMax = number;"
`;

exports[`OpenAPI 3.0 — Exclusive Bounds, Tier 3 (3.0-#29-#30) > 3.0-#30: exclusiveMaximum: true + maximum: N produces correct type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ExclusiveMax = number;"
`;

exports[`OpenAPI 3.0 — Format (3.0-#19) > 3.0-#19: generates branded type for date-time format on string 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type DateTimeString = string & { readonly __format?: 'date-time' };

export type CreatedAt = DateTimeString;"
`;

exports[`OpenAPI 3.0 — Format (3.0-#19) > 3.0-#19: generates branded type for numeric format 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Int32Number = number & { readonly __format?: 'int32' };

export type Score = Int32Number;"
`;

exports[`OpenAPI 3.0 — Format (3.0-#19) > 3.0-#19: generates branded type for uuid format on string 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type UuidString = string & { readonly __format?: 'uuid' };

export type UserId = UuidString;"
`;

exports[`OpenAPI 3.0 — Format (3.0-#19) > 3.0-#19: generates plain string for binary format (no branding) 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type FileData = string;"
`;

exports[`OpenAPI 3.0 — Format (3.0-#19) > 3.0-#19: generates plain string for byte format (no branding) 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Encoded = string;"
`;

exports[`OpenAPI 3.0 — Null via nullable (3.0-#7) > 3.0-#7: absent nullable produces regular type (no null) 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type RegularString = string;"
`;

exports[`OpenAPI 3.0 — Null via nullable (3.0-#7) > 3.0-#7: nullable inside allOf produces intersection | null 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Base = { id: string; };

export type Extended = (Base & { extra?: string; }) | null;"
`;

exports[`OpenAPI 3.0 — Null via nullable (3.0-#7) > 3.0-#7: nullable inside oneOf produces union | null 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type NullableOneOf = (string | number) | null;"
`;

exports[`OpenAPI 3.0 — Null via nullable (3.0-#7) > 3.0-#7: nullable without type produces unknown 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type NullableUntyped = unknown;"
`;

exports[`OpenAPI 3.0 — Null via nullable (3.0-#7) > 3.0-#7: nullable: false produces regular type (no null) 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type NotNullable = string;"
`;

exports[`OpenAPI 3.0 — Null via nullable (3.0-#7) > 3.0-#7: nullable: true on array produces T[] | null 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type NullableArray = string[] | null;"
`;

exports[`OpenAPI 3.0 — Null via nullable (3.0-#7) > 3.0-#7: nullable: true on boolean produces boolean | null 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type NullableBool = boolean | null;"
`;

exports[`OpenAPI 3.0 — Null via nullable (3.0-#7) > 3.0-#7: nullable: true on enum produces enum | null 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type NullableStatus = 'active' | 'inactive' | null;"
`;

exports[`OpenAPI 3.0 — Null via nullable (3.0-#7) > 3.0-#7: nullable: true on integer produces number | null 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type NullableInt = number | null;"
`;

exports[`OpenAPI 3.0 — Null via nullable (3.0-#7) > 3.0-#7: nullable: true on object property produces property | null 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type User = { name: string; nickname: string | null; };"
`;

exports[`OpenAPI 3.0 — Null via nullable (3.0-#7) > 3.0-#7: nullable: true on string produces string | null 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type NullableName = string | null;"
`;

exports[`OpenAPI 3.0 — ReadOnly & WriteOnly (3.0-#16-#17) > 3.0-#16: excludes readOnly properties from request body type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostItemsBody = { name: string; password: string; };

export type PostItemsResponse = { name: string; id: string; };"
`;

exports[`OpenAPI 3.0 — ReadOnly & WriteOnly (3.0-#16-#17) > 3.0-#16: excludes readOnly properties from request body type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostItemsBody, PostItemsResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postItems: decorateWithErrors<(body: PostItemsBody) => Promise<PostItemsResponse>, never>(
      async (body: PostItemsBody): Promise<PostItemsResponse> => {
        try {
          const result = await requester<PostItemsResponse>("POST", \`/items\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — ReadOnly & WriteOnly (3.0-#16-#17) > 3.0-#16: includes readOnly properties in response type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostItemsBody = { name: string; password: string; };

export type PostItemsResponse = { name: string; id: string; };"
`;

exports[`OpenAPI 3.0 — ReadOnly & WriteOnly (3.0-#16-#17) > 3.0-#16: includes readOnly properties in response type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostItemsBody, PostItemsResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postItems: decorateWithErrors<(body: PostItemsBody) => Promise<PostItemsResponse>, never>(
      async (body: PostItemsBody): Promise<PostItemsResponse> => {
        try {
          const result = await requester<PostItemsResponse>("POST", \`/items\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — ReadOnly & WriteOnly (3.0-#16-#17) > 3.0-#17: excludes writeOnly properties from response type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostItemsBody = { name: string; password: string; };

export type PostItemsResponse = { name: string; id: string; };"
`;

exports[`OpenAPI 3.0 — ReadOnly & WriteOnly (3.0-#16-#17) > 3.0-#17: excludes writeOnly properties from response type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostItemsBody, PostItemsResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postItems: decorateWithErrors<(body: PostItemsBody) => Promise<PostItemsResponse>, never>(
      async (body: PostItemsBody): Promise<PostItemsResponse> => {
        try {
          const result = await requester<PostItemsResponse>("POST", \`/items\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — ReadOnly & WriteOnly (3.0-#16-#17) > 3.0-#17: includes writeOnly properties in request body type 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type PostItemsBody = { name: string; password: string; };

export type PostItemsResponse = { name: string; id: string; };"
`;

exports[`OpenAPI 3.0 — ReadOnly & WriteOnly (3.0-#16-#17) > 3.0-#17: includes writeOnly properties in request body type 2`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.
import { ApiError, UnspecifiedApiError, ErrorResponse, StreamResponse, RequesterFailError } from './contracts.js';
import type { PostItemsBody, PostItemsResponse } from './contracts.js';
import { decorateWithErrors } from 'genoc/runtime';
import type { Requester } from 'genoc/runtime';

export { isDefinedError } from 'genoc/runtime';
export type { Requester } from 'genoc/runtime';

export function createClient(requester: Requester) {
  return {
    /**
     * @param body — request body
     */
    postItems: decorateWithErrors<(body: PostItemsBody) => Promise<PostItemsResponse>, never>(
      async (body: PostItemsBody): Promise<PostItemsResponse> => {
        try {
          const result = await requester<PostItemsResponse>("POST", \`/items\`, { body });
          if (result instanceof ErrorResponse) {
            throw new UnspecifiedApiError(result.status, result.data, result.message ?? \`Request failed with status \${result.status}\`);
          }
          if (result instanceof StreamResponse) {
            throw new RequesterFailError(new Error("Unexpected stream response"));
          }
          return result;
        } catch (error) {
          if (error instanceof UnspecifiedApiError) throw error;
          if (error instanceof ApiError) throw error;
          throw new RequesterFailError(error);
        }
      },
      [] as const,
    )
  };
}

export type ApiClient = ReturnType<typeof createClient>;"
`;

exports[`OpenAPI 3.0 — Validation Constraints, Tier 2 (3.0-#22-#28) > 3.0-#22: minItems does not crash and is not emitted in output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type TagList = string[];"
`;

exports[`OpenAPI 3.0 — Validation Constraints, Tier 2 (3.0-#22-#28) > 3.0-#22-#28: multiple constraints together do not crash 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type BoundedString = string;"
`;

exports[`OpenAPI 3.0 — Validation Constraints, Tier 2 (3.0-#22-#28) > 3.0-#23: maxItems does not crash and is not emitted in output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type LimitedList = number[];"
`;

exports[`OpenAPI 3.0 — Validation Constraints, Tier 2 (3.0-#22-#28) > 3.0-#24: minLength does not crash and is not emitted in output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Username = string;"
`;

exports[`OpenAPI 3.0 — Validation Constraints, Tier 2 (3.0-#22-#28) > 3.0-#25: maxLength does not crash and is not emitted in output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type ShortName = string;"
`;

exports[`OpenAPI 3.0 — Validation Constraints, Tier 2 (3.0-#22-#28) > 3.0-#26: pattern does not crash and is not emitted in output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Email = string;"
`;

exports[`OpenAPI 3.0 — Validation Constraints, Tier 2 (3.0-#22-#28) > 3.0-#27: minimum does not crash and is not emitted in output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Age = number;"
`;

exports[`OpenAPI 3.0 — Validation Constraints, Tier 2 (3.0-#22-#28) > 3.0-#28: maximum does not crash and is not emitted in output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Percentage = number;"
`;

exports[`OpenAPI 3.0 — example keyword > 3.0 example does not crash and is not emitted in output 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Color = string;"
`;

exports[`OpenAPI 3.0 — example keyword > 3.0 example on object does not crash 1`] = `
"// Auto-generated by genoc from OpenAPI 3.0.3 spec. DO NOT EDIT.

import { ApiError, StreamResponse } from 'genoc/runtime';
export {
  ApiError,
  UnspecifiedApiError,
  DefaultApiError,
  RequesterFailError,
  StreamResponse,
  ErrorResponse,
} from 'genoc/runtime';

export type Product = { name?: string; price?: number; };"
`;
